fix: scrollbar overflowing parent container

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -52,6 +52,7 @@ nav {
   width: 100%;
   display: grid;
   place-items: center;
+  overflow-x: hidden;
 }
 
 .combobox-container {
